2004-09-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/alpha/jmpbuf-unwind.h: Define __libc_unwind_longjmp.
	* sysdeps/i386/jmpbuf-unwind.h: Likewise
	* sysdeps/powerpc/jmpbuf-unwind.h: Likewise.
	* sysdeps/s390/jmpbuf-unwind.h: Likewise.
	* sysdeps/sh/jmpbuf-unwind.h: Likewise.
	* sysdeps/sparc/sparc32/jmpbuf-unwind.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/jmpbuf-unwind.h: Likewise.
	* sysdeps/x86_64/jmpbuf-unwind.h: Likewise.
	* unwind.c: Use it.

	* sysdeps/unix/sysv/linux/i386/bits/pthreadtypes.h (pthread_cond_t):
	Rename __data.__clock to __data.__nwaiters, make it unsigned int.
	* sysdeps/unix/sysv/linux/x86_64/bits/pthreadtypes.h (pthread_cond_t):
	Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S:
	Decrement __nwaiters.  If pthread_cond_destroy has been called and
	this is the last waiter, signal pthread_cond_destroy caller and
	avoid using the pthread_cond_t structure after unlock.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S: Likewise.
	Read clock type from the least significant bits of __nwaiters instead
	of __clock.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S: Likewise.
	* sysdeps/unix/sysv/linux/internaltypes.h: Define COND_CLOCK_BITS.

2004-08-31  Jakub Jelinek  <jakub@redhat.com>

	[BZ #342]
	* Makefile (tests): Add tst-cond20 and tst-cond21.
	* tst-cond20.c: New test.
	* tst-cond21.c: New test.
	* sysdeps/unix/sysv/linux/alpha/bits/pthreadtypes.h
	(pthread_cond_t): Rename __data.__clock to __data.__nwaiters, make
	it unsigned int.
	* sysdeps/unix/sysv/linux/s390/bits/pthreadtypes.h (pthread_cond_t):
	Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/pthreadtypes.h
	(pthread_cond_t): Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/pthreadtypes.h (pthread_cond_t):
	Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/pthreadtypes.h (pthread_cond_t):
	Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/pthreadtypes.h (pthread_cond_t):